Add annotations to secure endpoints